--- a/Sources/SwiftSovereignStates/en.lproj/Localizable.strings
+++ b/Sources/SwiftSovereignStates/en.lproj/Localizable.strings
@@ -9,8 +9,47 @@
 /*
  Countries
  */
-/// Names
+/// Short Names
+"country_name_abkhazia" = "Abkhazia";
+"country_name_afghanistan" = "Afghanistan";
+"country_name_albania" = "Albania";
+"country_name_algeria" = "Algeria";
+"country_name_american_samoa" = "American Samoa";
+"country_name_andorra" = "Andorra";
+"country_name_angola" = "Angola";
+"country_name_anguilla" = "Anguilla";
+"country_name_antigua_and_barbuda" = "Antigua and Barbuda";
+"country_name_argentina" = "Argentina";
+"country_name_armenia" = "Armenia";
+"country_name_aruba" = "Aruba";
+"country_name_artsakh" = "Artsakh";
+"country_name_australia" = "Australia";
+"country_name_austria" = "Austria";
+"country_name_azerbaijan" = "Azerbaijan";
+
+"country_name_uganda" = "Uganda";
+"country_name_ukraine" = "Ukraine";
+"country_name_united_arab_emirates" = "United Arab Emirates";
+"country_name_united_kingdom" = "United Kingdom";
 "country_name_united_states" = "United States";
+"country_name_united_states_virgin_islands" = "United States Virgin Islands";
+"country_name_uruguay" = "Uruguay";
+"country_name_uzbekistan" = "Uzbekistan";
+
+"country_name_vanuatu" = "Vanuatu";
+"country_name_vatican_city" = "Vatican City";
+"country_name_venezuela" = "Venezuela";
+"country_name_vietnam" = "Vietnam";
+
+"country_name_wallis_and_futuna" = "Wallis and Futuna";
+"country_name_western_sahara" = "Western Sahara";
+
+"country_name_yemen" = "Yemen";
+
+"country_name_zambia" = "Zambia";
+"country_name_zimbabwe" = "Zimbabwe";
+
+"country_name_puerto_rico" = "Puerto Rico";
 
 /*
  Subdivisions
