corrected some english country short name localizations

--- a/Sources/SwiftSovereignStates/_locale/en_country_short_names.lproj/Localizable.strings
+++ b/Sources/SwiftSovereignStates/_locale/en_country_short_names.lproj/Localizable.strings
@@ -60,7 +60,7 @@
 "ivory_coast" = "Ivory Coast";
 "croatia" = "Croatia";
 "cuba" = "Cuba";
-"curacao" = "Curacao";
+"curacao" = "Curaçao";
 "cyprus" = "Cyprus";
 "czech_republic" = "Czech Republic";
 "democratic_republic_of_the_congo" = "Democratic Republic of the Congo";
@@ -182,7 +182,7 @@
 "romania" = "Romania";
 "russia" = "Russia";
 "rwanda" = "Rwanda";
-"saint_barthelemy" = "Saint Barthelemy";
+"saint_barthelemy" = "Saint Barthélemy";
 "saint_helena_ascension_and_tristan_da_cunha" = "Saint Helena Ascension and Tristan da Cunha";
 "saint_kitts_and_nevis" = "Saint Kitts and Nevis";
 "saint_lucia" = "Saint Lucia";
@@ -191,7 +191,7 @@
 "saint_vincent_and_the_grenadines" = "Saint Vincent and the Grenadines";
 "samoa" = "Samoa";
 "san_marino" = "San Marino";
-"sao_tome_and_principe" = "Sao Tome and Principe";
+"sao_tome_and_principe" = "São Tomé and Príncipe";
 "saudi_arabia" = "Saudi Arabia";
 "scotland" = "Scotland";
 "senegal" = "Senegal";
