--- a/Sources/SwiftSovereignStates/_locale/en/subdivision/types.lproj/Localizable.strings
+++ b/Sources/SwiftSovereignStates/_locale/en/subdivision/types.lproj/Localizable.strings
@@ -54,6 +54,7 @@
 "states_name_singular" = "State";
 "subdivisions_name_singular" = "Subdivision";
 "territories_name_singular" = "Territory";
+"towns_singular" = "Town";
 "union_territories_name_singular" = "Union Territory";
 "voivodeships_name_singular" = "Voivodeship";
 
@@ -102,5 +103,6 @@
 "states_name_plural" = "States";
 "subdivisions_name_plural" = "Subdivisions";
 "territories_name_plural" = "Territories";
+"towns_plural" = "Towns";
 "union_territories_name_plural" = "Union Territories";
 "voivodeships_name_plural" = "Voivodeships";
