--- a/Sources/SwiftSovereignStates/Resources/Localization/SubdivisionTypes.xcstrings
+++ b/Sources/SwiftSovereignStates/Resources/Localization/SubdivisionTypes.xcstrings
@@ -1,1 +1,545 @@
-{"strings":{"autonomous_cities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Autonomous City"}}},"extractionState":"manual"},"dependencies_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Dependency"}}},"extractionState":"manual"},"departments_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Department"}}},"extractionState":"manual"},"councils_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Council"}}},"extractionState":"manual"},"provinces_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Province"}}},"extractionState":"manual"},"autonomous_municipalities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Autonomous Municipality"}}},"extractionState":"manual"},"communes_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Commune"}}},"extractionState":"manual"},"governorates_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Governorate"}}},"extractionState":"manual"},"administrative_areas_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Administrative Area"}}},"extractionState":"manual"},"federal_territories_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Federal Territory"}}},"extractionState":"manual"},"towns_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Town"}}},"extractionState":"manual"},"autonomous_republics_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Autonomous Republic"}}},"extractionState":"manual"},"divisions_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Division"}}},"extractionState":"manual"},"prefectures_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Prefecture"}}},"extractionState":"manual"},"special_administrative_areas_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Special Administrative Area"}}},"extractionState":"manual"},"special_administrative_regions_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Special Administrative Region"}}},"extractionState":"manual"},"municipalities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Municipality"}}},"extractionState":"manual"},"federal_districts_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Federal District"}}},"extractionState":"manual"},"territories_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Territory"}}},"extractionState":"manual"},"voivodeships_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Voivodeship"}}},"extractionState":"manual"},"districts_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"District"}}},"extractionState":"manual"},"special_municipalities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Special Municipality"}}},"extractionState":"manual"},"special_self_governing_cities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Special self-governing City"}}},"extractionState":"manual"},"indigenous_province_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Indigenous Province"}}},"extractionState":"manual"},"city_municipalities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"City Municipality"}}},"extractionState":"manual"},"incorporated_areas_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Incorporated Area"}}},"extractionState":"manual"},"chartered_cities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Charter City"}}},"extractionState":"manual"},"cities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"City"}}},"extractionState":"manual"},"counties_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"County"}}},"extractionState":"manual"},"freely_associated_states_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Freely Associated State"}}},"extractionState":"manual"},"autonomous_islands_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Autonomous Island"}}},"extractionState":"manual"},"independent_cities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Independent City"}}},"extractionState":"manual"},"regions_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Region"}}},"extractionState":"manual"},"states_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"State"}}},"extractionState":"manual"},"autonomous_regions_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Autonomous Region"}}},"extractionState":"manual"},"subdivisions_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Subdivision"}}},"extractionState":"manual"},"parishes_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Parish"}}},"extractionState":"manual"},"autonomous_districts_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Autonomous District"}}},"extractionState":"manual"},"metropolitan_cities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Metropolitan City"}}},"extractionState":"manual"},"autonomous_communities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Autonomous Community"}}},"extractionState":"manual"},"cantons_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Canton"}}},"extractionState":"manual"},"federal_entities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Federal Entity"}}},"extractionState":"manual"},"autonomous_territorial_units_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Autonomous Territorial Unit"}}},"extractionState":"manual"},"federal_member_states_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Federal Member State"}}},"extractionState":"manual"},"atolls_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Atoll"}}},"extractionState":"manual"},"special_self_governing_dependencies_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Special self-governing Dependency"}}},"extractionState":"manual"},"union_territories_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Union Territory"}}},"extractionState":"manual"},"oblasts_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Oblast"}}},"extractionState":"manual"},"special_cities_name":{"localizations":{"en":{"stringUnit":{"state":"translated","value":"Special City"}}},"extractionState":"manual"}},"version":"1.0","sourceLanguage":"en"}
+{
+  "sourceLanguage" : "en",
+  "strings" : {
+    "administrative_areas_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Administrative Area"
+          }
+        }
+      }
+    },
+    "atolls_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Atoll"
+          }
+        }
+      }
+    },
+    "autonomous_cities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Autonomous City"
+          }
+        }
+      }
+    },
+    "autonomous_communities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Autonomous Community"
+          }
+        }
+      }
+    },
+    "autonomous_districts_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Autonomous District"
+          }
+        }
+      }
+    },
+    "autonomous_islands_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Autonomous Island"
+          }
+        }
+      }
+    },
+    "autonomous_municipalities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Autonomous Municipality"
+          }
+        }
+      }
+    },
+    "autonomous_regions_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Autonomous Region"
+          }
+        }
+      }
+    },
+    "autonomous_republics_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Autonomous Republic"
+          }
+        }
+      }
+    },
+    "autonomous_territorial_units_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Autonomous Territorial Unit"
+          }
+        }
+      }
+    },
+    "cantons_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Canton"
+          }
+        }
+      }
+    },
+    "chartered_cities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Charter City"
+          }
+        }
+      }
+    },
+    "cities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "City"
+          }
+        }
+      }
+    },
+    "city_municipalities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "City Municipality"
+          }
+        }
+      }
+    },
+    "communes_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Commune"
+          }
+        }
+      }
+    },
+    "councils_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Council"
+          }
+        }
+      }
+    },
+    "counties_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "County"
+          }
+        }
+      }
+    },
+    "departments_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Department"
+          }
+        }
+      }
+    },
+    "dependencies_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Dependency"
+          }
+        }
+      }
+    },
+    "districts_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "District"
+          }
+        }
+      }
+    },
+    "divisions_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Division"
+          }
+        }
+      }
+    },
+    "federal_districts_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Federal District"
+          }
+        }
+      }
+    },
+    "federal_entities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Federal Entity"
+          }
+        }
+      }
+    },
+    "federal_member_states_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Federal Member State"
+          }
+        }
+      }
+    },
+    "federal_territories_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Federal Territory"
+          }
+        }
+      }
+    },
+    "freely_associated_states_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Freely Associated State"
+          }
+        }
+      }
+    },
+    "governorates_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Governorate"
+          }
+        }
+      }
+    },
+    "incorporated_areas_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Incorporated Area"
+          }
+        }
+      }
+    },
+    "independent_cities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Independent City"
+          }
+        }
+      }
+    },
+    "indigenous_province_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Indigenous Province"
+          }
+        }
+      }
+    },
+    "metropolitan_cities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Metropolitan City"
+          }
+        }
+      }
+    },
+    "municipalities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Municipality"
+          }
+        }
+      }
+    },
+    "oblasts_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Oblast"
+          }
+        }
+      }
+    },
+    "parishes_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Parish"
+          }
+        }
+      }
+    },
+    "prefectures_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Prefecture"
+          }
+        }
+      }
+    },
+    "provinces_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Province"
+          }
+        }
+      }
+    },
+    "regions_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Region"
+          }
+        }
+      }
+    },
+    "special_administrative_areas_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Special Administrative Area"
+          }
+        }
+      }
+    },
+    "special_administrative_regions_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Special Administrative Region"
+          }
+        }
+      }
+    },
+    "special_cities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Special City"
+          }
+        }
+      }
+    },
+    "special_municipalities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Special Municipality"
+          }
+        }
+      }
+    },
+    "special_self_governing_cities_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Special self-governing City"
+          }
+        }
+      }
+    },
+    "special_self_governing_dependencies_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Special self-governing Dependency"
+          }
+        }
+      }
+    },
+    "states_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "State"
+          }
+        }
+      }
+    },
+    "subdivisions_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Subdivision"
+          }
+        }
+      }
+    },
+    "territories_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Territory"
+          }
+        }
+      }
+    },
+    "towns_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Town"
+          }
+        }
+      }
+    },
+    "union_territories_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Union Territory"
+          }
+        }
+      }
+    },
+    "voivodeships_name" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Voivodeship"
+          }
+        }
+      }
+    }
+  },
+  "version" : "1.0"
+}
